--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Role Bot",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start" : "node bot.js"
   },
   "author": "Raindeer",
   "license": "ISC",
